# ISY-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: libs.hpp
include/network/: acceptor.hpp  data.hpp  reader.hpp  writer.hpp
include/system/: handler.hpp  system.hpp
src/network/: acceptor.cpp  reader.cpp  writer.cpp
src/system/: handler.cpp  system.cpp
